Screen width of 120 is enforced for all the code (finalizing the transition started by r1178). A lot of changes were made throughout most of the source files, documentation, and sample files. Mostly it affects long comments and static strings. However, these changes should not affect any of the code behavior (was tested by tests/2exec/ against the previous revision).
Version incremented to 1.2b3

--- a/misc/hyperfun/Makefile
+++ b/misc/hyperfun/Makefile
@@ -1,13 +1,13 @@
-# Makefile for calc_pip_arg. Uses the default gfortran, which should be present on any Unix. Other
-# compilers and optimization flags may also be used, but this makes little sense, since the routine
-# is a trivial one and is executed only a few times.
+# Makefile for calc_pip_arg. Uses the default gfortran, which should be present on any Unix. Other compilers and
+# optimization flags may also be used, but this makes little sense, since the routine # is a trivial one and is executed
+# only a few times.
 
 CF      = gfortran
 FFLAGS  = -O
 PROG    = calc_pip_arg
 FSOURCE = calc_pip_arg.f90
 
-#===================================================================================================
+#=======================================================================================================================
 
 .PHONY: all clean
 
