--- a/src/ocl/Makefile
+++ b/src/ocl/Makefile
@@ -5,27 +5,22 @@
 # Copyright (C) 2010-2013 ADDA contributors
 # This file is part of ADDA.
 #
-# ADDA is free software: you can redistribute it and/or modify it under the 
-# terms of the GNU General Public License as published by the Free Software 
-# Foundation, either version 3 of the License, or (at your option) any later 
-# version.
+# ADDA is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 #
-# ADDA is distributed in the hope that it will be useful,but WITHOUT ANY 
-# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR 
-# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+# ADDA is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty
+# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 #
-# You should have received a copy of the GNU General Public License along with 
-# ADDA. If not, see <http://www.gnu.org/licenses/>.
+# You should have received a copy of the GNU General Public License along with ADDA. If not, see
+# <http://www.gnu.org/licenses/>.
 
-#===================================================================================================
-# !!! Start of control section. Flags and options here are designed to be modified by user to choose
-# particular options for compilation. However, the default set of options may work out-of-box on
-# some systems.
-#===================================================================================================
+#=======================================================================================================================
+# !!! Start of control section. Flags and options here are designed to be modified by user to choose particular options
+# for compilation. However, the default set of options may work out-of-box on some systems.
+#=======================================================================================================================
 
-# Depending on a particular OpenCL installation one may need to manually specify paths to 
-# corresponding headers and libraries. Path should be absolute or relative to the location of this 
-# Makefile.
+# Depending on a particular OpenCL installation one may need to manually specify paths to corresponding headers and
+# libraries. Path should be absolute or relative to the location of this Makefile.
 #CFLAGS += -I"C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v3.2/include"
 #LDFLAGS += -L"C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v3.2/lib/Win32"
 
@@ -62,9 +57,9 @@ else # the following is only for non-sparse mode
   endif
 endif
 
-#===================================================================================================
+#=======================================================================================================================
 # !!! End of control section. Everything below is not designed to be modified by user
-#===================================================================================================
+#=======================================================================================================================
 
 CFLAGS    += -DOPENCL 
 LDFLAGS   += -lOpenCL
@@ -73,10 +68,9 @@ CSOURCE   += oclcore.c
 ifneq ($(filter OCL_READ_SOURCE_RUNTIME,$(OPTIONS)),)
   CFLAGS += -DOCL_READ_SOURCE_RUNTIME
 else
-  # Each of the following .cl files is automatically transformed into .clstr files (located at ocl/) 
-  # during compile time. The latter contain all the content of the original file as a C string, and 
-  # are included in the C source files to define static strings. These strings define are further 
-  # used as a source to compile OpenCL kernels.
+  # Each of the following .cl files is automatically transformed into .clstr files (located at ocl/) during compile
+  # time. The latter contain all the content of the original file as a C string, and are included in the C source files
+  # to define static strings. These strings define (macro) are further used as a source to compile OpenCL kernels.
   CLSOURCE := oclkernels.cl
 endif
 
@@ -85,13 +79,12 @@ CLSPREFIX  := ../$(OCL)/
 CLSTRING   := $(CLSOURCE:.cl=.clstr)
 # The list of non-existing .clstr files
 MISSINGCLS := $(filter-out $(wildcard *.clstr),$(CLSTRING))
-# This command performs transformation of source CL file into a C string. Call to sed quotes special
-# characters '#' and '\', then encloses each line in "...\n".
+# This command performs transformation of source CL file into a C string. Call to sed quotes special characters '#' and
+# '\', then encloses each line in "...\n".
 CLSCOMMAND := sed -e 's/["\\]/\\&/g' -e 's/.*/"&\\n"/'
-# Non-existing .clstr should be created right now, since otherwise automatic generation of
-# dependencies will fail. The implementation is equivalent to the one used in the make pattern in
-# common.mk (which is used for updating .clstr files when necessary), but more complicated since 
-# vpath (for .cl files) and automatic pattern substitution cannot be used
+# Non-existing .clstr should be created right now, since otherwise automatic generation of dependencies will fail. The
+# implementation is equivalent to the one used in the make pattern in common.mk (which is used for updating .clstr files
+# when necessary), but more complicated since vpath (for .cl files) and automatic pattern substitution cannot be used
 $(foreach file,$(MISSINGCLS),$(shell $(CLSCOMMAND) $(patsubst %.clstr,$(PARENT)/%.cl,$(file)) > $(file)))
 vpath %.cl $(PARENT)
 
