- Makefiles in misc/*/ were improved to allow compilation from another folder (path) and with extra flags (e.g. -m32) - Added new folder devtools. It contains a couple of text files, bash scripts for preparing files for release and other dev tasks, and default set of svn-properties for new files (to be used with TortoiseSVN). Most of these files have already existed - now they are just updated and added to version control. - svn-ignore properties of several folders were updated

--- a/misc/hyperfun/Makefile
+++ b/misc/hyperfun/Makefile
@@ -3,9 +3,13 @@
 # only a few times.
 
 CF      = gfortran
-FFLAGS  = -O
+FFLAGS  = -O $(EXTRA_FLAGS)
 PROG    = calc_pip_arg
 FSOURCE = calc_pip_arg.f90
+
+srcdir = .
+vpath %.f90 $(srcdir)/
+vpath Makefile $(srcdir)/
 
 #=======================================================================================================================
 
@@ -14,7 +18,7 @@ FSOURCE = calc_pip_arg.f90
 all: $(PROG)
 
 $(PROG): $(FSOURCE) Makefile
-	$(CF) -o $@ $(FFLAGS) $(FSOURCE)
+	$(CF) -o $@ $(FFLAGS) $<
 
 clean:
 	rm -f $(PROG) $(PROG).exe
