--- a/misc/near_field/Makefile
+++ b/misc/near_field/Makefile
@@ -16,39 +16,45 @@
 
 # ---- GNU Fortran Compiler
 FC     = gfortran
-FFLAGS = -O3 -ffast-math -funroll-loops
+FFLAGS = -O3 -ffast-math -funroll-loops $(EXTRA_FLAGS)
 MPIFC  = $(FC)
 LIBS   =
 MPILIBS= -lfmpich2g
 # You might need something like the following on Windows (with MinGW)
-MPILIBS+=  -L"C:/Program Files/MPICH2/lib" -I"C:/Program Files/MPICH2/include"
+#MPILIBS += -I"C:/Program Files/MPICH2/include"
+#MPILIBS += -L"C:/Program Files/MPICH2/lib" -I"C:/Program Files/MPICH2/include"
 
 ALLPROGS = gendip genplane genline nearfield checknfsymm
 
+srcdir = .
+vpath %.f $(srcdir)/
+vpath Makefile $(srcdir)/
+
+#=======================================================================================================================
 
 all: $(ALLPROGS)
 	@echo 'everything done!'
 
 xfuty.o : xfuty.f Makefile
-	$(FC)  -c $(FFLAGS)  xfuty.f
+	$(FC)  -c $(FFLAGS) $<
 
 nfsubs.o : nfsubs.f Makefile
-	$(FC)  -c $(FFLAGS)  nfsubs.f
+	$(FC)  -c $(FFLAGS) $<
 
 gendip : gendip.f   Makefile
-	$(FC)   $(FFLAGS) -o $@  gendip.f
+	$(FC)   $(FFLAGS) -o $@ $<
 
 genline : genline.f Makefile
-	$(FC)   $(FFLAGS) -o $@  genline.f
+	$(FC)   $(FFLAGS) -o $@ $<
 
 genplane : genplane.f Makefile
-	$(FC)   $(FFLAGS) -o $@  genplane.f
+	$(FC)   $(FFLAGS) -o $@ $<
 
 nearfield : nearfield.f  xfuty.o nfsubs.o Makefile
-	$(MPIFC)  $(FFLAGS) -o $@  nearfield.f $(MPILIBS) xfuty.o nfsubs.o
+	$(MPIFC)  $(FFLAGS) -o $@ $< $(MPILIBS) xfuty.o nfsubs.o
 
 checknfsymm : checknfsymm.f  nfsubs.o Makefile
-	$(FC)  $(FFLAGS) -o $@  checknfsymm.f nfsubs.o
+	$(FC)  $(FFLAGS) -o $@ $< nfsubs.o
 
 clean:
 	rm -f *.o $(ALLPROGS) $(addsuffix .exe,$(ALLPROGS))
