Major changes to the code due to switch to complex types of C99 (issue 70). All the code using complex numbers has been looked through, and in many cases it was significantly simplified. Many functions from cmplx.h (operating on complex scalars) has been removed, as they are no more used. - E2_alldir is now used to store only the final result, while (intermediary) complex fields are stored in a new vector E_ad. This slightly increases required memory (proportional to number of angles), but improves clarity. - removed restrict optimizations from cmplx.h, because the functions are inline anyway. - added boolVector to memory.c/h (and a couple of minor corrections) - arguments of CalcField in crosssec.c are now declared as 3-vectors. - added test of gcc version in Makefile, '-pedantic' is used only for versions >= gcc (otherwise spurious warnings about complex numbers appear). - MatVec in sparse mode was updated to use standard functions from linalg.c - removed copying of scalar function arguments into registers for functions in linalg.c. That had some sense for double[2] arguments, but can be left to compiler to arguments that are passed by value. - removed all '#pragma ivdep' in linalg.c, since now this information should be obvious to compiler anyway. - version incremented to 1.3a1
MPI part:
- To have portable coupling with 'double complex', MPI_C_DOUBLE_COMPLEX is now used when available. However, it can be either unavailable, or not supported in reduction operations. Therefore, rather complicated logic has been added to parbas.h to detect different cases and take full advantage of the available features. Missing features are emulated by replacing 'double complex' with 'double[2]' as was before. But it is not perfectly portable.
- Similar issues were addressed for MPI_C_BOOL. The corresponding part of granule generator was changed to take full advantage of it.
- Accumulate() now operates in place and operates on any datatype. Corresponding buffers Egrid_buffer, Epla

--- a/src/Makefile
+++ b/src/Makefile
@@ -328,10 +328,17 @@ ifeq ($(COMPILER),gnu)
   CSTD    := -std=c99
   COPT1   := -O2
   COPT2   := -O3 -ffast-math -funroll-loops
-  CWARN   := -Wall -Wextra -pedantic -Wcast-qual -Wpointer-arith -Wwrite-strings -Wstrict-prototypes \
+  CWARN   := -Wall -Wextra -Wcast-qual -Wpointer-arith -Wwrite-strings -Wstrict-prototypes \
              -Wstrict-aliasing=1 -Wshadow -Wcast-align -Wnested-externs -Wcomment -Wno-unknown-pragmas \
              -Wno-overlength-strings
-
+  # gcc versions prior to 4.7.2 are affected by bug http://gcc.gnu.org/bugzilla/show_bug.cgi?id=7263 , which causes
+  # -pedantic flag to generates warnings on every occurence of I (complex i)
+  GCC_GTEQ_472 := $(shell expr `gcc -dumpversion | sed -e 's/\.\([0-9][0-9]\)/\1/g' -e 's/\.\([0-9]\)/0\1/g' \
+    -e 's/^[0-9]\{3,4\}$$/&00/'` \>= 40702)
+  ifeq "$(GCC_GTEQ_472)" "1"
+    CWARN += -pedantic
+  endif
+  
   # Use gfortran if available (GCC 4 and later), otherwise try g77
   ifeq ($(shell which gfortran > /dev/null 2>&1 && echo 0),0)
     CF    := gfortran
