- '-int nloc' was renamed to '-int nloc0' since it works well with '-pol nloc0'. - New '-int nloc' was added, based on averaging of h function (the most troublesome part of Gh) over the cube volume. It works well with '-pol nloc'. Both '-int nloc/nloc0' use the same underlying function with small changes in one term. The function was largely rewritten from previous implementation of '-int nloc'. - Several minor changes to comments, help and log output - Nonlocal formulations were added to test suites in tests/2exec/ - Test was added to Mafefile to require version 3.81, including support for else-if (thanks to Stefania D'Agostino for pointing out problems with version 3.80). - Version incremented to 1.3b3

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 # Main makefile for ADDA package
-# Requires GNU make to execute. Actual compiling goes in folders 'seq', 'mpi', and 'ocl' for sequential, parallel (MPI),
-# and OpenCL (GPU accelerated) version respectively
+# Requires GNU make (at least 3.81) to execute. 
+# Actual compiling goes in folders 'seq', 'mpi', and 'ocl' for sequential, parallel (MPI), and OpenCL (GPU accelerated)
+# version respectively
 # $Date::                            $
 #
 # Copyright (C) 2006-2013 ADDA contributors
@@ -24,6 +25,14 @@
 # command line option to make. In particular, this can be relevant for specifying a different version of the compiler
 # (see below).
 #=======================================================================================================================
+
+# Test version and features of GNU make
+ifeq ($(.FEATURES),)
+  $(error GNU make version 3.81 or higher is required)
+endif
+ifeq ($(filter else-if,$(.FEATURES)),)
+  $(error make does not support else-if)
+endif
 
 #=======================================================================================================================
 # Fixed definitions for non-compilation targets
