OpenCL: * added support for clAmdBlas library as USE_CLBLAS option (currently just influencing the BiCG solver) * translated BiCG solver to execute on OpenCL devices * introduced global argvec and resultvec upload control variable for matvec * added some global opencl buffers to be used during the BiCG solver when USE_CLBLAS is active

--- a/src/ocl/Makefile
+++ b/src/ocl/Makefile
@@ -58,6 +58,10 @@ else # the following is only for non-sparse mode
     # https://forge.imag.fr/projects/ocl-icd/) for linking.
     #LDFLAGS +=-Wl,--unresolved-symbols=ignore-in-shared-libs
   endif
+    ifneq ($(filter USE_CLBLAS,$(OPTIONS)),)
+    LDLIBS += -lclAmdBlas
+    CFLAGS += -DUSE_CLBLAS
+    endif
 endif
 
 #=======================================================================================================================
